Allow binding custom roles with auth providers
